compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/WrongTypeName1.kt
package test

import java.util.*

public open class WrongTypeName1 {
    public open fun foo(p0 : String?) : String? = ""
}
